test/sematest/valid/implicit_this.java
class Foo {
  public int bar() {return 10;}
  public void zomg() {
    int k = bar();
  }
  public static void main(String[] args) {
  }
}
