test/sematest/invalid/access_to_main_method_args.java
class Test {
  public static void main(String[] args) {
    return args;
  }
}
